fix for help component overlapping body

--- a/application/static/assets/css/styles.css
+++ b/application/static/assets/css/styles.css
@@ -428,10 +428,10 @@ html,
   top: 0;
   background-color: rgb(0, 0, 0, 0.9);
   color: white;
-  /* opacity: 0; */
+  opacity: 0;
   pointer-events: none;
   transition: transform .3s ease-in-out,
-  opacity .2s ease-in-out;
+              opacity .5s ease-in-out;
   transform: translateY(-100%);
   z-index: 3;
 }
@@ -451,7 +451,7 @@ html,
 }
 
 .help.in-view {
-	/* opacity: 1; */
+	opacity: 1;
 	pointer-events: auto;
 	transform: translateY(0);
 }
